@@ -2,6 +2,9 @@ CHANGELOG
 This is the change log for the phpWebSite base only. Each module has
 its own separate CHANGELOG file.
 
+25 May 2009
++ addValues in Link.php accepts arrays of values now
+
 22 April 2009
 + Added second parameter to PHPWS_Core::stripObjValues - strip_null.
   If true, then null values will not be added to array. False will
